Fix for Auto Reloading in Grails
Various changes to the Config files to enable Auto Reloading 

-Got rid of the localDev environment, merged it with the Development environment. But Development environment will detect the hostname of the machine it's running on and assign the appropriate configuration.